--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,2 @@
-spring.datasource.url=jdbc:mysql://lab2-275.cvkuzzrejj5b.us-west-1.rds.amazonaws.com/admin
-spring.datasource.username=admin
-spring.datasource.password=admindatabase
-spring.datasource.tomcat.max-active=1
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port:8080
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.id.new_generator_mappings = false
-spring.jpa.properties.hibernate.format_sql = true
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
